k8s/namespaces.yml
# namespaces.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: chaoscart

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
