k8s/order-service.yml
# order-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: chaoscart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service
  
  template:
    metadata:
      labels:
        app: order-service

    spec:

      containers:
      - name: order-service

        image: ghcr.io/devanshtyagi04/chaoscart-order-service:latest

        command:
          - npm
          - start

        ports:
        - containerPort: 4003

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /health
            port: 4003

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 4003

          initialDelaySeconds: 15
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: chaoscart

spec:
  selector:
    app: order-service

  ports:
  - port: 4003
    targetPort: 4003

  type: ClusterIP
