k8s/product-service.yml
# product-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: chaoscart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:

      containers:
      - name: product-service

        image: ghcr.io/devanshtyagi04/chaoscart-product-service:latest

        command:
          - npm
          - start

        ports:
        - containerPort: 4002

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /health
            port: 4002

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 4002

          initialDelaySeconds: 15
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: chaoscart
  labels:
    app: product-service

spec:
  selector:
    app: product-service

  ports:
    - name: http
      port: 4002
      targetPort: 4002

  type: ClusterIP
