k8s/user-service.yml
# user-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: chaoscart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:

      containers:
      - name: user-service

        image: ghcr.io/devanshtyagi04/chaoscart-user-service:latest

        command:
          - npm
          - start

        ports:
        - containerPort: 4001

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /health
            port: 4001

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 4001

          initialDelaySeconds: 15
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: chaoscart
  labels:
    app: user-service

spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 4001
      targetPort: 4001

  type: ClusterIP
